--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
 </section>
 <section>
-
+    <ul>
+        <li> Oliver Møller Kluge
+        <li> 22 år
+        <li> Bor i København NV
+        <li> Elsker øl og fodbold
+    </ul>
 </section>
 </body>
 </html>
